# romq

./: .editorconfig  .gitignore  LICENSE  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/romq/: __init__.py
src/romq/app/: __init__.py  errors.py
src/romq/app/io/: __init__.py  errors.py  file.py  types.py
src/romq/app/nes/: __init__.py  common.py  inspect.py  models.py  search.py
src/romq/cli/: __init__.py  main.py  render.py  statuses.py
src/romq/cli/commands/: nes.py
src/romq/core/: __init__.py  errors.py
src/romq/core/nes/: __init__.py  errors.py
src/romq/core/nes/parser/: __init__.py  api.py  common.py  errors.py  ines.py  ines20.py  models.py  types.py
tests/app/: conftest.py  test_nes_inspect.py  test_nes_search.py  utils.py
tests/cli/: conftest.py  test_main.py  test_nes.py  test_nes_inspect.py  test_nes_search.py  utils.py
tests/core/: test_nes_parser.py
