[project]
name = "romq"
version = "0.1.0"
description = "A library and CLI utility for ROM metadata inspection and search"
readme = "README.md"
authors = [
    { name = "artcom", email = "kust.artcom@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "py7zr>=1.1.3",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "prek>=0.4.8",
    "pyfakefs>=6.2.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[project.scripts]
romq = "romq.cli.main:main"

[tool.uv]
required-version = ">=0.11.21,<0.12.0"

[tool.basedpyright]
include = ["src", "tests"]
typeCheckingMode = "recommended"
enableBasedFeatures = true

[tool.ruff]
fix = false
line-length = 79
indent-width = 4
output-format = "grouped"
target-version = "py314"
required-version = ">=0.15.20"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "PL",  # Pylint
    "UP",  # pyupgrade
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "D",   # pydocstyle
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D203",
    "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
nested-string-quote-style = "preferred"

[tool.ruff.lint.isort]
forced-separate = ["tests"]

[tool.pytest]
addopts = ["--strict-markers"]
markers = [
    "app: application layer tests",
    "core: core layer tests",
    "cli: cli layer tests"
]
